--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@grebyn/toolflow-cli",
   "type": "module",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "An open-source CLI for MCP installation",
   "author": "Grebyn",
   "license": "MIT",
@@ -11,7 +11,9 @@
     "toolflow-cli": "./bin/cli.cjs"
   },
   "files": [
-    "bin"
+    "bin",
+    "LICENSE",
+    "Readme.md"
   ],
   "publishConfig": {
     "access": "public"
