--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@grebyn/toolflow-cli",
+  "name": "@grebyn/toolentry-cli",
   "type": "module",
-  "version": "1.2.0",
+  "version": "1.0.0",
   "description": "An open-source CLI for MCP installation",
   "author": "Grebyn",
   "license": "MIT",
   "main": "./bin/cli.cjs",
   "module": "./bin/cli.mjs",
   "bin": {
-    "toolflow-cli": "./bin/cli.cjs"
+    "toolentry-cli": "./bin/cli.cjs"
   },
   "files": [
     "bin",
