--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@grebyn/toolflow-cli",
   "type": "module",
-  "version": "0.0.0",
+  "version": "1.0.2",
   "description": "An open-source CLI for MCP installation",
   "author": "Grebyn",
   "license": "MIT",
   "main": "./bin/cli.cjs",
   "module": "./bin/cli.mjs",
   "bin": {
-    "toolflow-cli": "./bin/cli.js"
+    "toolflow-cli": "./bin/cli.cjs"
   },
   "files": [
     "bin"
