--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@grebyn/toolentry-cli",
   "type": "module",
-  "version": "1.0.2",
+  "version": "1.0.6",
   "description": "An open-source CLI for MCP installation",
   "author": "Grebyn",
   "license": "MIT",
   "main": "./bin/cli.cjs",
   "module": "./bin/cli.mjs",
   "bin": {
+    "toolentry": "./bin/cli.cjs",
     "toolflow-cli": "./bin/cli.cjs"
   },
   "files": [
